--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,10 @@ header {
 }
 
 @media screen and (max-width: 700px) {
+    #website-name{
+        font-size: 12px;
+    }
+
     .sections {
         display: none;
     }
