--- a/styles.css
+++ b/styles.css
@@ -164,10 +164,11 @@ header {
 .pdf-container {
     width: 100%;
     height: 100vh;
+    background-color: white;
 }
 
 .download-resume-button {
-    position: absolute;
+    position: fixed;
     bottom: 40px;
     right: 40px;
     display: inline-block;
